--- a/index.html
+++ b/index.html
@@ -178,20 +178,27 @@
           <!-- Project Card 1 -->
           <div class="bg-white shadow-md p-6 rounded-lg">
             <h3 class="text-xl font-bold mb-2">SIEP E-BIKE CHALLENGE</h3>
-            <img src="images/IMG-20240126-WA0011.jpg" alt="e-bike" class="mb-4 rounded-md" />
+            <img
+              src="images/project1.jpg"
+              alt="Project 1 Image"
+              class="mb-4 rounded-md"
+            />
             <p class="mb-4">
               We participated in the Siep E-Bike Challenge, showcasing a
               retrofitted electric bike that blends advanced technology with
               classic design, promoting sustainable urban mobility.
             </p>
-            <a href="#" class="text-blue-500 hover:underline">View Project</a>
+            <a href="siep.html" class="text-blue-500 hover:underline"
+              >View Project</a
+            >
           </div>
+
           <!-- Project Card 2 -->
           <div class="bg-white shadow-md p-6 rounded-lg">
             <h3 class="text-xl font-bold mb-2">ANTI SLEEP ALARM FOR DRIVERS</h3>
             <img
-              src="images/IMG_20230424_143751.jpg"
-              alt="sleep-alarm"
+              src="images/project2.jpg"
+              alt="Project 2 Image"
               class="mb-4 rounded-md"
             />
             <p class="mb-4">
@@ -202,7 +209,54 @@
             </p>
             <a href="#" class="text-blue-500 hover:underline">View Project</a>
           </div>
-          <!-- Add more project cards here -->
+
+          <!-- Project Card 3 -->
+          <div class="bg-white shadow-md p-6 rounded-lg">
+            <h3 class="text-xl font-bold mb-2">Project 2 Title</h3>
+            <img
+              src="images/project2.jpg"
+              alt="Project 2 Image"
+              class="mb-4 rounded-md"
+            />
+            <p class="mb-4">Project 2 description goes here.</p>
+            <a href="#" class="text-blue-500 hover:underline">View Project</a>
+          </div>
+
+          <!-- Project Card 4 -->
+          <div class="bg-white shadow-md p-6 rounded-lg">
+            <h3 class="text-xl font-bold mb-2">Project 2 Title</h3>
+            <img
+              src="images/project2.jpg"
+              alt="Project 2 Image"
+              class="mb-4 rounded-md"
+            />
+            <p class="mb-4">Project 2 description goes here.</p>
+            <a href="#" class="text-blue-500 hover:underline">View Project</a>
+          </div>
+
+          <!-- Project Card 5 -->
+          <div class="bg-white shadow-md p-6 rounded-lg">
+            <h3 class="text-xl font-bold mb-2">Project 2 Title</h3>
+            <img
+              src="images/project2.jpg"
+              alt="Project 2 Image"
+              class="mb-4 rounded-md"
+            />
+            <p class="mb-4">Project 2 description goes here.</p>
+            <a href="#" class="text-blue-500 hover:underline">View Project</a>
+          </div>
+
+          <!-- Project Card 6 -->
+          <div class="bg-white shadow-md p-6 rounded-lg">
+            <h3 class="text-xl font-bold mb-2">Project 2 Title</h3>
+            <img
+              src="images/project2.jpg"
+              alt="Project 2 Image"
+              class="mb-4 rounded-md"
+            />
+            <p class="mb-4">Project 2 description goes here.</p>
+            <a href="#" class="text-blue-500 hover:underline">View Project</a>
+          </div>
         </div>
       </div>
     </section>
@@ -258,31 +312,39 @@
       </div>
     </section>
 
-   <!-- Footer Section -->
-<footer class="bg-gray-800 text-white py-4">
-  <div class="container mx-auto flex justify-center items-center">
-    <div class="flex space-x-4">
-      <!-- Social Icons -->
-     <a href="https://www.instagram.com/yourprofile" class="text-white hover:text-gray-400"
-        ><i class="fab fa-instagram"></i
-      ></a>
+    <!-- Footer Section -->
+    <footer class="bg-gray-800 text-white py-4">
+      <div class="container mx-auto flex justify-center items-center">
+        <div class="flex space-x-4">
+          <!-- Social Icons -->
+          <a
+            href="https://www.instagram.com/yourprofile"
+            class="text-white hover:text-gray-400"
+            ><i class="fab fa-instagram"></i
+          ></a>
 
-      <a href="https://twitter.com/Mr_Conqurer23" class="text-white hover:text-gray-400"
-        ><i class="fab fa-twitter"></i
-      ></a>
-      <a href="https://www.linkedin.com/in/nandhakumar-a-28529726a/" class="text-white hover:text-gray-400"
-        ><i class="fab fa-linkedin-in"></i
-      ></a>
-      <a href="https://github.com/Nandha28" class="text-white hover:text-gray-400"
-        ><i class="fab fa-github"></i
-      ></a>
-      <!-- Add more social icons with your profile links here -->
-    </div>
-  </div>
-  <div class="container mx-auto mt-2 text-center">
-    <p>&copy; 2024 NANDHA Portfolio. All rights reserved.</p>
-  </div>
-</footer>
+          <a
+            href="https://twitter.com/Mr_Conqurer23"
+            class="text-white hover:text-gray-400"
+            ><i class="fab fa-twitter"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/nandhakumar-a-28529726a/"
+            class="text-white hover:text-gray-400"
+            ><i class="fab fa-linkedin-in"></i
+          ></a>
+          <a
+            href="https://github.com/Nandha28"
+            class="text-white hover:text-gray-400"
+            ><i class="fab fa-github"></i
+          ></a>
+          <!-- Add more social icons with your profile links here -->
+        </div>
+      </div>
+      <div class="container mx-auto mt-2 text-center">
+        <p>&copy; 2024 NANDHA Portfolio. All rights reserved.</p>
+      </div>
+    </footer>
 
     <!-- Font Awesome JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
